Mar 30 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  - Added Scalar::Util to the dependencies in Makefile.PL.

  Error.pm #0.15002
  - Fixed http://rt.cpan.org/Public/Bug/Display.html?id=18024 and a related
  exception thrown because ->isa was called on something that was not
  certainly an object.

  Error.pm #0.15001

  - Moved Error.pm inside the distribution to reside under lib/.

Oct 9 2001 <u_arunkumar@yahoo.com> (Arun Kumar U)

  Error.pm #0.15

  - Removed the run_clauses calls from the stack trace

May 12 2001 <u_arunkumar@yahoo.com> (Arun Kumar U)

  Error.pm #0.14

  - Added overloading method for 'bool'. This was neccessary so that
    examining the value of $@ after a eval block, returns a true  
    value
  - Applied the diffs from Graham's code base
  - Changed README with more information about the module

Change 436 on 2000/03/29 by <gbarr@pobox.com> (Graham Barr)

  Added ppd stuff to MANIFEST and Makefile.PL

Change 435 on 2000/03/29 by <gbarr@pobox.com> (Graham Barr)

  Changed README to contain examples from the POD

Change 434 on 2000/03/29 by <gbarr@pobox.com> (Graham Barr)

  Documentation updates
  removed experimental warning, too many users now to change too much.

Change 422 on 2000/03/28 by <gbarr@pobox.com> (Graham Barr)

  Some tidy-ups

Change 145 on 1998/05/31 by <gbarr@pobox.com> (Graham Barr)

  Errno.pm
  - Separated run_clauses out into a sub

Oct 28 1997 <gbarr@pobox.com>

  Error.pm #0.12

  - Removed proceed clause

Oct 27 1997 <gbarr@pobox.com>

  Error.pm #0.11

  - Fixed calling of otherwise clause if there are no catch claues

Oct 21 1997 <gbarr@pobox.com>

  Error.pm #0.10

  - Added proceed clause, the return value from the proceed block
    will be returned by throw.
  - try will now return the result from the try block
    or from the catch
  - Changed except clause handling so that block is only evaluated
    once, the first time the result is required.
  - Changed catch and proceed blocks to accept two arguments. The